# art-gallery_hosted

./: README.md  pyproject.toml  requirements.txt
art_gallery/: contants.py  email_config.py  models.py  urls.py
art_gallery/migrations/: 0001_initial.py
art_gallery/views/: __init__.py  account.py  art.py  email.py  transaction.py  webcontent.py
art_gallery/web_contents/: images.json  text.json
core/: settings.py  urls.py
