[tool.poetry]
name = "for item in $(cat requirements-txt); do   poetry add \"${item}\"; done"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "for item in $(cat requirements"}]

[tool.poetry.dependencies]
python = "^3.7"
asgiref
astroid
certifi
charset-normalizer
dill
Django
djangorestframework
djangorestframework-simplejwt
idna
imagekitio
isort
Jinja2
lazy-object-proxy
MarkupSafe
mccabe
Pillow
platformdirs
PyJWT
pylint
pytz
redmail
requests
sqlparse
tomli
tomlkit
urllib3
wrapt
dj-database-url
psycopg2-binary
gunicorn


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
